--- a/src/app/views/transportes/autocarros/pages/autocarro/autocarro-detalhes/autocarro-detalhes.component.css
+++ b/src/app/views/transportes/autocarros/pages/autocarro/autocarro-detalhes/autocarro-detalhes.component.css
@@ -45,7 +45,7 @@ body {
   text-align: center;
   margin-bottom: 15px;
   padding: 10px;
-  background: #6c757d;
+  border: 1px solid #6c757d;
   color: white;
   border-radius: 10px;
   font-weight: bold;
@@ -113,16 +113,15 @@ body {
   width: 50px;
   position: relative;
 
-  &::after {
+/*   &::after {
     content: "";
     position: absolute;
     left: 50%;
     top: 0;
-    height: 100%;
-    width: 2px;
+   
     background: linear-gradient(to bottom, #6c757d, #adb5bd);
     transform: translateX(-50%);
-  }
+  } */
 }
 
 .legend {
