--- a/src/app/views/layout/sidebar/sidebar.component.html
+++ b/src/app/views/layout/sidebar/sidebar.component.html
@@ -87,13 +87,13 @@
       <div class="collapse" id="reservas">
         <ul class="nav flex-column sub-menu">
           <li class="nav-item">
-            <a class="nav-link" routerLink="/reservas">Reservas</a>
+            <a class="nav-link" routerLink="/reservas-bilhetes/reservas">Reservas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/bilhetes">Bilhetes</a>
+            <a class="nav-link" routerLink="/reservas-bilhetes/bilhetes">Bilhetes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/pagamentos">Pagamentos</a>
+            <a class="nav-link" routerLink="/reservas-bilhetes/pagamentos">Pagamentos</a>
           </li>
         </ul>
       </div>
